--- a/groceries.html
+++ b/groceries.html
@@ -13,197 +13,186 @@
     <title>nozamA - Groceries</title>
 </head>
 
-<body class="parallax">
-<nav class="navbar navbar-expand-lg bottomblur">
-    <a class="navbar-brand" href="#">
-        <img src="img/nozamALogo2.png" width="70" height="30" alt="nozamA logo">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse">
-        <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown">Categories</a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Electronics</a>
-                    <a class="dropdown-item" href="#">Groceries</a>
-                    <a class="dropdown-item" href="#">Musical Instruments</a>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Today's Deals</a>
-            </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a href="#" class="nav-link" data-toggle="modal" data-target="#login">Login</a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link">Register</a>
-            </li>
-        </ul>
-    </div>
-</nav>
-<!--Real Nav Bar-->
-<nav class="navbar navbar-expand-lg navbar-light navbg pt-0">
-    <a class="navbar-brand" href="#">
-        <img src="img/nozamALogo2.png" width="100" height="35" alt="nozamA logo">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse mt-3" id="navbar">
-        <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown">Categories</a>
-                <div class="dropdown-menu dropmenu">
-                    <a href="http://localhost:8080/electronics" class="dropdown-item">Electronics</a>
-                    <a href="http://localhost:8080/groceries" class="dropdown-item">Groceries</a>
-                    <a href="http://localhost:8080/instruments" class="dropdown-item">Musical Instruments</a>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Today's Deals</a>
-            </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-            {{{ cartLink }}}
-            <li class="nav-item" id="loginbutton">
-                <a href="#" class="nav-link" data-toggle="modal" data-target="#login">Login</a>
-            </li>
-            <li class="nav-item" id="registerbutton">
-                <a href="#" class="nav-link" data-toggle="modal" data-target="#signup">Sign Up</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+<body>
+    <nav class="navbar navbar-expand-lg bottomblur">
+        <a class="navbar-brand" href="#">
+            <img src="img/nozamALogo2.png" width="70" height="30" alt="nozamA logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown">Categories</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Electronics</a>
+                        <a class="dropdown-item" href="#">Groceries</a>
+                        <a class="dropdown-item" href="#">Musical Instruments</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Today's Deals</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a href="#" class="nav-link" data-toggle="modal" data-target="#login">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Register</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <!--Real Nav Bar-->
+    <nav class="navbar navbar-expand-lg navbar-light navbg pt-0">
+        <a class="navbar-brand" href="landing.html">
+            <img src="img/nozamALogo2.png" width="100" height="35" alt="nozamA logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse mt-3" id="navbar">
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown">Categories</a>
+                    <div class="dropdown-menu dropmenu">
+                        <a href="http://localhost:8080/electronics" class="dropdown-item">Electronics</a>
+                        <a href="http://localhost:8080/groceries" class="dropdown-item">Groceries</a>
+                        <a href="http://localhost:8080/instruments" class="dropdown-item">Musical Instruments</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Today's Deals</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                {{{ cartLink }}}
+                <li class="nav-item" id="loginbutton">
+                    <a href="#" class="nav-link" data-toggle="modal" data-target="#login">Login</a>
+                </li>
+                <li class="nav-item" id="registerbutton">
+                    <a href="#" class="nav-link" data-toggle="modal" data-target="#signup">Sign Up</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-<div class="modal fade" id="login">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Login</h5>
-                <button type="button" class="close" data-dismiss="modal">
-                    &times;
-                </button>
-            </div>
-            <form method="post" action="/login">
-                <div class="modal-body">
-                    <div class="form-group">
-                        <label for="username">Username</label>
-                        <input name="username" type="text" class="form-control" id="username" placeholder="Enter email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="loginpassword">Password</label>
-                        <input name="password" type="password" class="form-control" id="loginpassword" placeholder="Enter password" required>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-light" data-dismiss="modal">
-                        Cancel
+    <div class="modal fade" id="login">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Login</h5>
+                    <button type="button" class="close" data-dismiss="modal">
+                        &times;
                     </button>
-                    <button type="button" value="Submit" onclick="form_submit1()" data-dismiss="modal" class="btn btn-pink">Login</button>
                 </div>
-            </form>
+                <form method="post" action="/login">
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="username">Username</label>
+                            <input name="username" type="text" class="form-control" id="username" placeholder="Enter email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="loginpassword">Password</label>
+                            <input name="password" type="password" class="form-control" id="loginpassword" placeholder="Enter password" required>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-light" data-dismiss="modal">
+                            Cancel
+                        </button>
+                        <button type="button" value="Submit" onclick="form_submit1()" data-dismiss="modal" class="btn btn-pink">Login</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-</div>
 
-<div class="modal fade" id="signup">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Sign Up</h5>
-                <button type="button" class="close" data-dismiss="modal">
-                    &times;
-                </button>
-            </div>
-            <form method="post" action="/register" id="register">
-                <div class="modal-body">
-                    <div class="form-group">
-                        <label for="registeruser">Username</label>
-                        <input name="username" type="text" class="form-control" id="registeruser" placeholder="Enter email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="registerpassword">Password</label>
-                        <div class="input-group" id="passwordeye">
-                            <input name="password" type="password" class="form-control" id="registerpassword" placeholder="Enter password" required>
-                            <div class="input-group-addon">
-                                <a href="#"><i class="fa fa-eye-slash" aria-hidden="true"></i></a>
+    <div class="modal fade" id="signup">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Sign Up</h5>
+                    <button type="button" class="close" data-dismiss="modal">
+                        &times;
+                    </button>
+                </div>
+                <form method="post" action="/register" id="register">
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="registeruser">Username</label>
+                            <input name="username" type="text" class="form-control" id="registeruser" placeholder="Enter email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="registerpassword">Password</label>
+                            <div class="input-group" id="passwordeye">
+                                <input name="password" type="password" class="form-control" id="registerpassword" placeholder="Enter password" required>
+                                <div class="input-group-addon">
+                                    <a href="#"><i class="fa fa-eye-slash" aria-hidden="true"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-light" data-dismiss="modal">
-                        Cancel
-                    </button>
-                    <button onclick="form_submit()" value="Submit" data-dismiss="modal" class="btn btn-pink">Register</button>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
-
-<div id="group1" class="parallax__group">
-    <div class="parallax__layer parallax__layer--base">
-        <div class="row justify-content-center category">
-            <div class="jumbotron bg-jumbo">
-
-                    <h1 class="display-4 title-black text-shadow">Groceries</h1>
-
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-light" data-dismiss="modal">
+                            Cancel
+                        </button>
+                        <button onclick="form_submit()" value="Submit" data-dismiss="modal" class="btn btn-pink">Register</button>
+                    </div>
+                </form>
             </div>
         </div>
+    </div>
+
+    <div class="main-img">
+        <h1 class="main-title mb-0 pt-5">Groceries</h1>
+    </div>
+    <div class="container">
         <div class="row justify-content-center">
-            <div class="card" style="width: 20rem;">
-                <img class="card-img-top" src="img/products/chips.png" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Lays Chips</h5>
-                    <p class="card-text">Yummy stuff that you should buy for parties</p>
+            <div class="product-card" style="width: 16rem; position: relative;">
+                <div class="product-img">
+                    <img class="card-img-top img-fit" src="img/products/coke.png" alt="Card image cap">
+                </div>
+                <div class="card-body align-items-center text-center">
+                    <h5 class="card-title text-center">Coca Cola</h5>
+                    <p class="card-text">The greatest soft drink in the universe. Fantastic.</p>
+                    <div class="cart-info">
+                        <h3>$1.99</h3>
+                        <a href="#" class="btn btn-primary">Add to Cart</a>
+                    </div>
                 </div>
             </div>
-            <div class="card" style="width: 20rem;">
-                <img class="card-img-top" src="img/products/chips.png" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Lays Chips</h5>
-                    <p class="card-text">Yummy stuff that you should buy for parties</p>
+            <div class="product-card" style="width: 16rem; position: relative;">
+                <div class="product-img">
+                    <img class="card-img-top img-fit" src="img/products/steak.png" alt="Card image cap">
+                </div>
+                <div class="card-body align-items-center text-center">
+                    <h5 class="card-title text-center">Kobe Steak</h5>
+                    <p class="card-text">One word: Kobe!</p>
+                    <div class="cart-info">
+                        <h3>$25.99</h3>
+                        <a href="#" class="btn btn-primary">Add to Cart</a>
+                    </div>
                 </div>
             </div>
-            <div class="card" style="width: 20rem;">
-                <img class="card-img-top" src="img/products/chips.png" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Lays Chips</h5>
-                    <p class="card-text">Yummy stuff that you should buy for parties</p>
+            <div class="product-card" style="width: 16rem; position: relative;">
+                <div class="product-img">
+                    <img class="card-img-top img-fit" src="img/products/eggs.png" alt="Card image cap">
+                </div>
+                <div class="card-body align-items-center text-center">
+                    <h5 class="card-title text-center">White Eggs</h5>
+                    <p class="card-text">Different than brown eggs. Different taste. Treat both equally.</p>
+                    <div class="cart-info">
+                        <h3>$5.99</h3>
+                        <a href="#" class="btn btn-primary">Add to Cart</a>
+                    </div>
                 </div>
             </div>
-            <div class="card" style="width: 20rem;">
-                <img class="card-img-top" src="img/products/chips.png" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Lays Chips</h5>
-                    <p class="card-text">Yummy stuff that you should buy for parties</p>
-                </div>
-            </div>
+
         </div>
     </div>
-</div>
-<div id="group2" class="parallax__group">
-    <div class="parallax__layer parallax__layer--base">
-        <div class="parallax-title">
-            <p>Vegetable Value</p>
-            <h2>30% off purchases when you order over $20 of vegetables</h2>
-            <button type="button" data-dismiss="modal" class="btn btn-pink">View Offer</button>
-        </div>
-    </div>
-    <div class="parallax__layer parallax__layer--back">
-        <img src="img/groceries.png" class="img-fluid groceries-img" alt="...">
-    </div>
-</div>
-<div id="group7" class="parallax__group">
-    <div class="parallax__layer parallax__layer--base">
-        <div class="parallax-title">Base Layer</div>
-    </div>
-</div>
 
 <footer class="text-center mt-5">copyright, and stuff</footer>
 <!--Scripts-->
